<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:hint="@string/uri_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            tools:targetApi="o" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/note_use_https"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:text="@string/viewport_width"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/screenWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:hint="@string/default_width"
                android:inputType="numberDecimal"
                android:maxLength="4" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/screenHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:hint="@string/default_height"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:visibility="gone" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/usedevicewidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginBottom="16sp"
                android:text="@string/use_device_width" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/note_dimensions"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/overviewmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/load_with_overview_mode" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/wideviewport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/use_wide_viewport" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/force_landscape" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>